ComponentsView. Убраны Warning!